--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "lynchmaniac",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -18,8 +19,11 @@
     "q": "^1.5.0"
   },
   "babel": {
-    "presets": ["es2015"],
+    "presets": [
+      "es2015"
+    ],
     "sourceMaps": true,
     "retainLines": true
-  }
+  },
+  "dependencies": {}
 }
